--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
   position: absolute;
   background: linear-gradient(
     to top,
-    rgba(0, 0, 0, 0.08),
-    rgba(0, 0, 0, 0.589)
+    rgba(0, 0, 0, 0.322),
+    rgba(0, 0, 0, 0.562)
   );
   top: 0;
   right: 0;
@@ -64,8 +64,28 @@ body {
   margin: 0;
 }
 
-.detalhes{
+.detalhes {
   margin: 10px 0;
   font-size: 12px;
   color: #ccc;
+}
+
+.descricao {
+  font-size: 14px;
+  line-height: 1.3;
+}
+
+.botoes {
+  margin-top: 20px;
+}
+
+.botoes button {
+  background: #fff;
+  color: black;
+  border: none;
+  padding: 10px 16px;
+  margin-right: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 14px;
 }
