--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ body {
 }
 
 .botoes button {
-  background: #fff;
-  color: black;
+  background: #ff0000;
+  color: white;
   border: none;
   padding: 10px 16px;
   margin-right: 10px;
