--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
   display: flex;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #141414;
+  background-color: black;
   position: sticky;
   top: 0;
   z-index: 999;
